--- a/master/leveledit.ini
+++ b/master/leveledit.ini
@@ -1,3 +1,5 @@
+[data/levels/160x40.tga]
+
 [None]
 tiles = tiles.tga
 codes = codes.tga
@@ -10,3 +12,6 @@ class = pgu.tilevid.Tilevid
 [app]
 screen_w = 800
 screen_h = 600
+
+[data/levels/boss_1.tga]
+
