no se porque se modifico :p

--- a/master/leveledit.ini
+++ b/master/leveledit.ini
@@ -7,6 +7,21 @@ width = 40
 height = 30
 class = pgu.tilevid.Tilevid
 
+[/home/matt/Proyectos/juego educativo/Tokuah/Tokuah/master/data/levels/prueba.tga]
+tile_w = 32
+tiles = tiles.tga
+codes = codes.tga
+class = pgu.tilevid.Tilevid
+tile_h = 32
+
 [app]
 screen_w = 800
 screen_h = 600
+
+[/home/matt/Proyectos/juego educativo/Tokuah/Tokuah/master/data/levels/nivel1.tga]
+tiles = tiles.tga
+codes = codes.tga
+tile_h = 32
+tile_w = 32
+class = pgu.tilevid.Tilevid
+
