--- a/master/lib/tools/leveledit.ini
+++ b/master/lib/tools/leveledit.ini
@@ -11,6 +11,13 @@ class = pgu.tilevid.Tilevid
 screen_w = 1000
 screen_h = 700
 
+[/home/matt/Proyectos/juego educativo/Tokuah/Tokuah/master/data/levels/nivel1.tga]
+tile_w = 16
+tiles = ../../data/tiles.tga
+codes = ../../data/codes.tga
+class = pgu.tilevid.Tilevid
+tile_h = 16
+
 [None]
 tiles = ../../data/tiles.tga
 codes = ../../data/codes.tga
@@ -18,5 +25,12 @@ tile_h = 16
 tile_w = 16
 width = 40
 height = 30
+class = pgu.tilevid.Tilevid
+
+[/home/matt/Proyectos/juego educativo/Tokuah/Tokuah/master/data/levels/probando.tga]
+tiles = ../../data/tiles.tga
+codes = ../../data/codes.tga
+tile_h = 16
+tile_w = 16
 class = pgu.tilevid.Tilevid
 
