--- a/master/lib/tools/tileedit.ini
+++ b/master/lib/tools/tileedit.ini
@@ -1,9 +1,11 @@
+[../../data/levels/nivel1.tga]
+
 [None]
 palette = palette.tga
-tile_h = 32
+height = 256
 tile_w = 32
 width = 256
-height = 256
+tile_h = 32
 
 [app]
 screen_w = 800
