--- a/master/lib/tools/leveledit.ini
+++ b/master/lib/tools/leveledit.ini
@@ -1,4 +1,9 @@
 [../../data/levels/nivel1.tga]
+tiles = ../../data/tiles.tga
+codes = ../../data/codes.tga
+tile_h = 16
+tile_w = 16
+class = pgu.tilevid.Tilevid
 
 [None]
 tiles = ../../data/tiles.tga
