--- a/master/lib/tools/leveledit.ini
+++ b/master/lib/tools/leveledit.ini
@@ -1,19 +1,29 @@
 [../../data/levels/nivel1.tga]
+tiles = ../../data/sources/tiles.tga
+codes = ../../data/codes.tga
+tile_h = 16
+tile_w = 16
+class = pgu.tilevid.Tilevid
+
+[../../data/levels/phil_7.tga]
+tiles = ../../data/sources/tiles.tga
+codes = ../../data/codes.tga
+tile_h = 16
+tile_w = 16
+class = pgu.tilevid.Tilevid
 
 [None]
-tiles = ../../data/tiles.tga
+tiles = ../../data/sources/tiles.tga
 codes = ../../data/codes.tga
-tile_h = 32
-tile_w = 32
-width = 512
-height = 512
+tile_h = 16
+tile_w = 16
+width = 256
+height = 256
 class = pgu.tilevid.Tilevid
 
 [app]
 screen_w = 1024
-<<<<<<< HEAD
 screen_h = 700
 
-=======
-screen_h = 750
->>>>>>> experimental
+[../../data/levels/pekuja_3.tga]
+
