--- a/master/lib/tools/leveledit.ini
+++ b/master/lib/tools/leveledit.ini
@@ -1,17 +1,3 @@
-[../../data/levels/nivel1.tga]
-tiles = ../../data/sources/tiles.tga
-codes = ../../data/codes.tga
-tile_h = 16
-tile_w = 16
-class = pgu.tilevid.Tilevid
-
-[../../data/levels/phil_7.tga]
-tiles = ../../data/sources/tiles.tga
-codes = ../../data/codes.tga
-tile_h = 16
-tile_w = 16
-class = pgu.tilevid.Tilevid
-
 [None]
 tiles = ../../data/sources/tiles.tga
 codes = ../../data/codes.tga
@@ -21,9 +7,30 @@ width = 256
 height = 256
 class = pgu.tilevid.Tilevid
 
+[../../data/levels/pekuja_3.tga]
+
 [app]
 screen_w = 1024
 screen_h = 700
 
-[../../data/levels/pekuja_3.tga]
+[/home/matt/Proyectos/juego educativo/Tokuah/Tokuah/master/data/levels/nivel1.tga]
+tile_w = 16
+tiles = ../../data/sources/tiles.tga
+codes = ../../data/codes.tga
+class = pgu.tilevid.Tilevid
+tile_h = 16
+
+[../../data/levels/phil_7.tga]
+tiles = ../../data/sources/tiles.tga
+codes = ../../data/codes.tga
+tile_h = 16
+tile_w = 16
+class = pgu.tilevid.Tilevid
+
+[../../data/levels/nivel1.tga]
+tiles = ../../data/sources/tiles.tga
+codes = ../../data/codes.tga
+tile_h = 16
+tile_w = 16
+class = pgu.tilevid.Tilevid
 
